include/maplibre_native_c/map.h


typedef struct mln_logical_extent {
  uint32_t width;
  uint32_t height;
  double scale_factor;
} mln_logical_extent;
typedef struct mln_map_options {
  uint32_t size;
  mln_logical_extent initial_extent;
  uint32_t map_mode;
  bool fast_pfor_enabled;
  uint64_t event_mask;
} mln_map_options;
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
typedef struct mln_camera_options {
  uint32_t size;
  uint32_t fields;
  double latitude;
  double longitude;
  double center_altitude;
  mln_edge_insets padding;
  mln_screen_point anchor;
  double zoom;
  double bearing;
  double pitch;
  double roll;
  double field_of_view;
} mln_camera_options;
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
typedef struct mln_free_camera_options {
  uint32_t size;
  uint32_t fields;
  mln_vec3 position;
  mln_quaternion orientation;
} mln_free_camera_options;
typedef struct mln_feature_state_selector {
  uint32_t size;
  uint32_t fields;
  mln_buffer_view source_id;
  mln_buffer_view source_layer_id;
  mln_buffer_view feature_id;
  mln_buffer_view state_key;
} mln_feature_state_selector;
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
typedef struct mln_bound_options {
  uint32_t size;
  uint32_t fields;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  double min_pitch;
  double max_pitch;
} mln_bound_options;
typedef struct mln_offline_tile_pyramid_region_definition {
  uint32_t size;
  const char* style_url;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_tile_pyramid_region_definition;
typedef struct mln_offline_geometry_region_definition {
  uint32_t size;
  const char* style_url;
  mln_buffer_view geometry;
  double min_zoom;
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_geometry_region_definition;
typedef struct mln_offline_region_definition {
  uint32_t size;
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
typedef struct mln_offline_region_info {
  uint32_t size;
  mln_offline_region_id id;
  mln_offline_region_definition definition;
  const uint8_t* metadata;
  size_t metadata_size;
} mln_offline_region_info;
MLN_API mln_status mln_runtime_offline_region_create(
  mln_runtime runtime, const mln_offline_region_definition* definition,
  const uint8_t* metadata, size_t metadata_size,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get(
  mln_runtime runtime, mln_offline_region_id region_id,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_list(
  mln_runtime runtime, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_regions_merge_database(
  mln_runtime runtime, const char* side_database_path,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_update_metadata(
  mln_runtime runtime, mln_offline_region_id region_id, const uint8_t* metadata,
  size_t metadata_size, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_get_status(
  mln_runtime runtime, mln_offline_region_id region_id,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_observed(
  mln_runtime runtime, mln_offline_region_id region_id, bool observed,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_set_download_state(
  mln_runtime runtime, mln_offline_region_id region_id, uint32_t state,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_invalidate(
  mln_runtime runtime, mln_offline_region_id region_id,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_offline_region_delete(
  mln_runtime runtime, mln_offline_region_id region_id,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_snapshot_get(
  mln_offline_region_snapshot snapshot, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_snapshot_destroy(
  mln_offline_region_snapshot snapshot
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_count(
  mln_offline_region_list list, size_t* out_count
) MLN_NOEXCEPT;
MLN_API mln_status mln_offline_region_list_get(
  mln_offline_region_list list, size_t index, mln_offline_region_info* out_info
) MLN_NOEXCEPT;
MLN_API void mln_offline_region_list_destroy(
  mln_offline_region_list list
) MLN_NOEXCEPT;
typedef struct mln_projection_mode {
  uint32_t size;
  uint32_t fields;
  bool axonometric;
  double x_skew;
  double y_skew;
} mln_projection_mode;
typedef struct mln_map_viewport_options {
  uint32_t size;
  uint32_t fields;
  uint32_t north_orientation;
  uint32_t constrain_mode;
  uint32_t viewport_mode;
  mln_edge_insets frustum_offset;
} mln_map_viewport_options;
typedef struct mln_map_tile_options {
  uint32_t size;
  uint32_t fields;
  uint32_t prefetch_zoom_delta;
  double lod_min_radius;
  double lod_scale;
  double lod_pitch_threshold;
  double lod_zoom_shift;
  uint32_t lod_mode;
} mln_map_tile_options;
typedef struct mln_map_snapshot {
  uint32_t size;
  uint32_t debug_options;
  uint64_t generation;
  mln_camera_options camera;
  mln_logical_extent logical_extent;
  mln_projection_mode projection_mode;
  mln_map_viewport_options viewport;
  bool fully_loaded;
  bool rendering_stats_view_enabled;
  bool repaint_demand;
  uint8_t reserved_flags;
  uint64_t event_mask;
  uint64_t latest_render_update_generation;
  mln_map_tile_options tile;
  mln_bound_options bounds;
  mln_free_camera_options free_camera;
} mln_map_snapshot;
typedef struct mln_camera_query_result {
  uint32_t size;
  uint32_t reserved;
  uint64_t generation;
  mln_camera_options camera;
} mln_camera_query_result;
MLN_API mln_map_options mln_map_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_map_create(
  mln_runtime runtime, const mln_map_options* options,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_snapshot_get(mln_map map, mln_map_snapshot* out_snapshot) MLN_NOEXCEPT;
MLN_API mln_status mln_map_resize(
  mln_map map, mln_logical_extent extent, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_repaint(
  mln_map map, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_feature_state(
  mln_map map, const mln_feature_state_selector* selector,
  mln_buffer_view state, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_get_feature_state(
  mln_map map, const mln_feature_state_selector* selector,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_remove_feature_state(
  mln_map map, const mln_feature_state_selector* selector,
  const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_request_still_image(
  mln_map map, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status
mln_map_release(mln_map map, const mln_completion* completion) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_url(
  mln_map map, const char* url, const mln_completion* completion
) MLN_NOEXCEPT;
MLN_API mln_status mln_map_set_style_json(
  mln_map map, mln_buffer_view json, const mln_completion* completion
) MLN_NOEXCEPT;